--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Calculadora de interes compuesto</title>
   <link rel="stylesheet" href="/CSS/styles.css">
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 </head>
 
 <body>
@@ -30,33 +31,35 @@
       <p>Te ayudo a calcular cuanta guita vas a tener si dejas de gastar en boludeces.</p>
     </div>
     <div>
-      <form>
+      <form id="formulario">
         <label for="capitalInicial">Capital inicial:</label>
-        <input type="text" id="capitalInicial" name="capital_inicial">
+        <input type="number" id="capitalInicial" name="capital_inicial">
         <br>
-        <label for="refuersoMensual">Refuerzo mensual:</label>
-        <input type="text" id="refuerzoMensual" name="refuerzo_mensual">
-        <br>
+<!--         <label for="refuerzoMensual">Refuerzo mensual:</label>
+        <input type="number" id="refuerzoMensual" name="refuerzo_mensual">
+        <br> -->
         <label for="periodo">Periodo de inversión (en años):</label>
-        <input type="text" id="periodo" name="periodo">
+        <input type="number" id="periodo" name="periodo">
         <br>
         <label for="tasaInteres">Tasa de interés anual:</label>
-        <input type="text" id="tasaInteres" name="tasa_interes">
+        <input type="number" id="tasaInteres" name="tasa_interes">
         <br>
-        <label for="calculo">Cálculo de interés:</label>
-  			<select id="calculo" name="calculo">
+        <!--<label for="calculo">Cálculo de interés:</label>
+   			<select id="calculo" name="calculo">
   				<option value="mensual">Mensual</option>
   				<option value="trimestral">Trimestral</option>
   				<option value="semestral">Semestral</option>
   				<option value="anual">Anual</option>
-  			</select>
+  			</select> -->
         <br>
         <input class="botones" type="submit" value="Calcular">
           <br>
-        <input class="botones" type="reset">
+        <input class="botones" type="reset" id="restablecer">
       </form>
     </div>
+    <div id="resultado" class="resultado"></div>
     <script src="/JS/main.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
   </main>
   <footer>
     <!-- Aca iria el footer -->
