--- a/index.html
+++ b/index.html
@@ -46,11 +46,14 @@
         <br>
         <br>
         <input class="botones" type="submit" value="CATcular">
-          <br>
+        <br>
         <input class="botones" type="reset" id="restablecer">
       </form>
+      <br>
+      <button id="verHistorial" class="botonHistorial">Ver Historial</button>
     </div>
     <div id="resultado" class="resultado"></div>
+    <div class="historial"></div>
     <script src="/JS/main.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
   </main>
