--- a/index.html
+++ b/index.html
@@ -37,9 +37,7 @@
         <br>
         <label for="periodo">Periodo de inversión (en años):</label>
         <input type="text" list="opciones" id="periodo" name="periodo">
-        <datalist id="opciones">
-
-        </datalist>
+        <datalist id="opciones"></datalist>
         <br>
         <label for="tasaInteres">Tasa de interés anual:</label>
         <input type="number" id="tasaInteres" name="tasa_interes">
