--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
       <button id="verHistorial" class="botonHistorial">Ver Historial</button>
     </div>
     <div id="resultado" class="resultado"></div>
-    <div class="historial"></div>
+    <h2 id="tituloHistorial">Historial de Valores ingresados</h2>
+    <div id="divHistorial" class="historial">      
+    </div>
     <script src="/JS/main.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
   </main>
