--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <input class="botones" type="reset" id="restablecer">
       </form>
       <br>
-      <button id="verHistorial" class="botonHistorial">Ver Historial</button>
+      <button id="verHistorial" class="botonHistorial"><a class='especial' href='#divHistorial'>Ver Historial</a></button>
     </div>
     <div id="resultado" class="resultado"></div>
     <br>
