--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <input type="number" id="tasaInteres" name="tasa_interes">
         <br>
         <br>
-        <input class="botones" type="submit" value="CATcular">
+        <input class="botones" type="submit" value="CATcular" id="calcular">
         <br>
         <input class="botones" type="reset" id="restablecer">
       </form>
